Fix to use Paths instead of Path to support Java 8. Add type to Process.java, add some docs in typing, remove test/java folders as I use different projects to manipulate and execute tests