@@ -1,6 +1,7 @@
 package datatypes;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 /**
  * A class representing a folder in the javasnes project data directory.
@@ -43,12 +44,12 @@ public class DataFolder {
 
             throw new IllegalArgumentException("Path cannot be null or empty.");
 
-        } else if ( !(Path.of(path).isAbsolute()) ) {
+        } else if ( !(Paths.get(path).isAbsolute()) ) {
 
             throw new IllegalArgumentException("Path must be absolute."
                     + "\n\n For example: /home/user/myproject/data or C:\\Users\\User\\myproject\\data");
 
-        } else if ( !(Path.of(path).toFile().isDirectory()) ) {
+        } else if ( !(Paths.get(path).toFile().isDirectory()) ) {
 
             throw new IllegalArgumentException("Path must be a directory."
                     + "\n\n For example: /home/user/myproject/data or C:\\Users\\User\\myproject\\data");
@@ -70,10 +71,14 @@ public class DataFolder {
 
         // Validate the path to ensure it is not null, not empty, is absolute, and is a directory.
         // If any of these conditions are not met, an IllegalArgumentException is thrown.
-        if (path == null || path.toString().isEmpty()) {
+        if (path == null) {
 
             throw new IllegalArgumentException("Path cannot be null or empty.");
 
+        } else if (path.toString().isEmpty()) {
+
+            throw new IllegalArgumentException("Path cannot be null or empty.");
+            
         } else if ( !(path.isAbsolute()) ) {
 
             throw new IllegalArgumentException("Path must be absolute."
